--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "elisateigeler",
   "version": "1.0.0",
   "description": "ElisaTeigeler",
-  "main": "index.js",
+  "main": "index.html",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
